fix layour break on xs device

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -273,4 +273,11 @@ Style for how many columns in different media device
 }
 
 
+@media (max-width: 350.98px) {
+  .navbar-brand-top {
+    display: none;
+  }
+}
+
+
 
